@@ -4356,11 +4356,37 @@ the cfengine output. It will be of little interest to humans.
 
 @end smallexample
 
-If a @code{singlecopy} pattern is defined the behavior of copy: is modified so
-that a given destination file, matching the pattern, will only be updated once. In other words,
-if someone tries to copy more then one source file to the same location, the destination will not
-be overwritten in the same run.
+If a @code{singlecopy} pattern is defined the behavior of copy: is
+modified so that a given destination file, matching the pattern, will
+only be updated once. In other words, if someone tries to copy more
+then one source file to the same location, the destination will not be
+overwritten in the same run. For example:
 
+@smallexample
+control:
+
+  actionsequence = ( copy )
+
+  singlecopy = ( /tmp/* )
+
+  addinstallables = ( zzz )
+
+ zzz::
+
+  autodefine = ( /tmp/* )
+
+copy:
+
+ /etc/passwd dest=/tmp/bla type=binary
+ /etc/group  dest=/tmp/bla type=binary
+
+alerts:
+
+ zzz::
+  
+  "Copied something in /tmp"
+
+@end smallexample
 
 
 @c .....................................................
@@ -10212,6 +10238,8 @@ file is as follows:
 
        LogAllConnections = ( @var{false/true} )
 
+       LogEncryptedTransfers = ( @var{false/true} )
+
        SkipVerify = ( @var{IP numbers} )
 
        DynamicAddresses = ( @var{IP numbers} )
@@ -10569,6 +10597,16 @@ If set to true, every successful connection will be logged to syslog.
 This could be useful for identifying abuses of the service, if the server
 should come under attack, e.g. a denial of service attack. The IP address
 can then be excluded from the allowed connections list.
+
+@c ...........................................
+@c SUBSECTION
+@c ...........................................
+
+@node LogEncryptedTransfers
+@subsection LogEncryptedTransfers
+
+If set to true, every successful request for a file that is granted
+access only with an encrypted connection is logged in syslog.
 
 @c ...........................................
 @c SUBSECTION
