@@ -1,4 +1,4 @@
-@set UPDATED 25 February 2006
-@set UPDATED-MONTH February 2006
+@set UPDATED 8 March 2006
+@set UPDATED-MONTH March 2006
 @set EDITION 2.1.19p1
 @set VERSION 2.1.19p1
